# DL-SOCRATIS

./: LICENSE  README.md
DL-SOCRATIS/: CMakeCache.txt  CMakeLists.txt  DEPENDENCIES  DL_config  INSTALL  LiCENSE.txt  TestPipelineConfig.h  TestPipelineConfig.h.in  auto_segm.cxx  install_python_software.cpp
DL-SOCRATIS/Clustering/: CMakeLists.txt  kmeans.h
DL-SOCRATIS/Deformation/: CMakeLists.txt  PCA_compute.h  deformable_registration.h  strain.py  strain_compute.h
DL-SOCRATIS/Filters/: BinaryImage.h  CMakeLists.txt  Change_information.h  ConnectCombonentFilter.h  GradientRecursiveGaussian.h  Grayscale.h  Histogram.h  HistogramGaussianRician.h  HistogramXYPlot.h  Median_Filter.h  Sobel.h  Thresholding.h  denoising.h  mergeimages.h  remove_image_object.h
DL-SOCRATIS/IO/: CMakeLists.txt  LabelObject.h  Resample.h  configuration.h  converterimage.h  evaluate.h  evaluate_code.py  image_vision.h  interparameters.h  itkInterBinaryShapeBasedInterpolationImageFilter.h  itkIntraBinaryShapeBasedInterpolationImageFilter.h  manual_gt_statistics.sh  read_writedata.h  threeDvtk2Dslice.h  unbiased_ground_trouth.h
DL-SOCRATIS/Initial_Segmentation/: LICENSE  setup.py
DL-SOCRATIS/Initial_Segmentation/Model/: roi.json  roidl.json  run.json  use.json  use1.json
DL-SOCRATIS/Initial_Segmentation/atlas/: GT_roi.config  S_Scar_roi.config  roi_ED.config  roi_ES.config
DL-SOCRATIS/Initial_Segmentation/auto_segm/: .goutputstream-68KFWZ  .goutputstream-9C2WWZ  .goutputstream-A4ETWZ  .goutputstream-T2UUVZ  LICENSE  __init__.py  config.py  create_net.py  createhdf5data.py  datasetnet.py  default.config  gan_synthetic.py  handle_data.py  main.py  regularization.py  run_model.py  store_model.py
DL-SOCRATIS/Initial_Segmentation/auto_segm/CycleGAN/: CGAN_main.py  CGAN_model.py  CGAN_module.py  CGAN_ops.py  CGAN_utils.py  __init__.py
DL-SOCRATIS/Initial_Segmentation/auto_segm/model/: __init__.py  crossovernet.py  main_net.py  roi_net.py
DL-SOCRATIS/Initial_Segmentation/auto_segm/model/RGMMnet/: RGMMNet.py  RGMM_net.py  __init__.py  coarsening.py
DL-SOCRATIS/Initial_Segmentation/auto_segm/utils/: .goutputstream-6XZYWZ  .goutputstream-GWARWZ  .parser_data.py.swp  BilinearUpSampling.py  __init__.py  basics.py  load_folder_images.py  losses_distance.py  parser_data.py  resnet_helpers.py  vision_outputs.py
DL-SOCRATIS/Initial_Segmentation/deform/: roi.py  roi_ED.config  roi_ES.config
DL-SOCRATIS/Initial_Segmentation/scripts/: ED_endo.py  ED_epi.py  ES_endo.py  ES_epi.py
DL-SOCRATIS/Initial_Segmentation/scripts/Configuration_file/: ED.config  ES.config
DL-SOCRATIS/Initial_Segmentation/scripts_translation/: LGE_cine.py  cine_LGE.py
DL-SOCRATIS/Parser_data_DL_code/: manual_gt_statistics.sh  parser.cpp
DL-SOCRATIS/Parser_data_DL_code/med2image/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dcm2niix  dcm_jpg.sh  install_manifest.txt  parser.cpp
DL-SOCRATIS/RicianMM/: CMakeLists.txt  itk-module.cmake
DL-SOCRATIS/RicianMM/example/: EMGaussianRician.cxx  EMGaussianRician.h  EMRician.cxx  EMRician.h
DL-SOCRATIS/RicianMM/include/: itkRicianMembershipFunction.h  itkRicianMembershipFunction.hxx  itkRicianMixtureModelComponent.h  itkRicianMixtureModelComponent.hxx
DL-SOCRATIS/RicianMM/test/: CMakeLists.txt  itkRicianMembershipFunctionTest.cxx  itkRicianMixtureModelComponentTest.cxx  test.R
DL-SOCRATIS/Segmentation/: CMakeLists.txt  Region_grown.h  Translation_registration.h  Watershed.h  boundarysegm.h  estportion.h  prewatershed.h  rebuild_myo_mask.h  seedpoints.h
DL-SOCRATIS/core/: Atlas_segm.h  CMakeLists.txt  Deformation.h  Evaluation.h  Initial_Segmentation.h  Interpolate_3D.h  Segmentation_Pipeline.h  Sensitivity.h  Translation_space.h
DL-SOCRATIS/libconfig-1.7.2/: Makefile  ac_config.h  config.status  libtool
DL-SOCRATIS/libconfig-1.7.2/doc/: Makefile
DL-SOCRATIS/libconfig-1.7.2/examples/: Makefile
DL-SOCRATIS/libconfig-1.7.2/examples/c/: Makefile  example1  example2  example3  example4
DL-SOCRATIS/libconfig-1.7.2/examples/c++/: Makefile  example1  example2  example3  example4
DL-SOCRATIS/libconfig-1.7.2/examples/c++/.deps/: example1.Po  example2.Po  example3.Po  example4.Po
DL-SOCRATIS/libconfig-1.7.2/examples/c++/.libs/: example1  example2  example3  example4  lt-example1  lt-example2  lt-example3  lt-example4
DL-SOCRATIS/libconfig-1.7.2/examples/c/.deps/: example1.Po  example2.Po  example3.Po  example4.Po
DL-SOCRATIS/libconfig-1.7.2/examples/c/.libs/: example1  example2  example3  example4  lt-example1  lt-example2  lt-example3  lt-example4
DL-SOCRATIS/libconfig-1.7.2/lib/: Makefile  libconfig++.pc  libconfig.pc
DL-SOCRATIS/libconfig-1.7.2/lib/.deps/: libconfig___la-grammar.Plo  libconfig___la-libconfig.Plo  libconfig___la-libconfigcpp.Plo  libconfig___la-scanctx.Plo  libconfig___la-scanner.Plo  libconfig___la-strbuf.Plo  libconfig___la-strvec.Plo  libconfig___la-util.Plo  libconfig___la-wincompat.Plo  libconfig_la-grammar.Plo  libconfig_la-libconfig.Plo  libconfig_la-scanctx.Plo  libconfig_la-scanner.Plo  libconfig_la-strbuf.Plo  libconfig_la-strvec.Plo  libconfig_la-util.Plo  libconfig_la-wincompat.Plo
DL-SOCRATIS/libconfig-1.7.2/lib/.libs/: libconfig++.so.11.0.2  libconfig.so.11.0.2
DL-SOCRATIS/libconfig-1.7.2/tests/: Makefile  libconfig_tests
DL-SOCRATIS/libconfig-1.7.2/tests/.deps/: libconfig_tests-tests.Po
DL-SOCRATIS/libconfig-1.7.2/tests/.libs/: libconfig_tests  lt-libconfig_tests
DL-SOCRATIS/libconfig-1.7.2/tinytest/: Makefile
DL-SOCRATIS/libconfig-1.7.2/tinytest/.deps/: tinytest.Po
DL-SOCRATIS/test/: CMakeLists.txt  RGhistogram_test.h
